apps/site/assets/css/_homepage.scss
@use 'sass:math';

// Refactored styles for homepage.
@mixin centered-10-col() {
  @include make-col-span(10);
  @include make-col-offset(1);
}

.m-homepage--10-col-sm-only {
  @include media-breakpoint-only(sm) {
    @include centered-10-col();
  }
}

.m-homepage__shortcuts {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: auto;
  justify-items: stretch;
  column-gap: 3.125%;
  margin-top: 24px;

  @include media-breakpoint-down(xs) {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
    column-gap: 3.125%;
  }
}

.m-homepage__shortcut {
  @include icon-size(80px);
  background-color: $white;
  border: $border;
  border-radius: 0.5rem;
  color: $gray-dark;
  display: inline-block;
  font-size: $font-size-h4;
  font-weight: 700;
  line-height: $headings-line-height;
  padding: $base-spacing;
  text-align: center;

  @include hover-focus-active {
    background-color: $brand-primary-lightest;
    color: $gray-dark;
    text-decoration: none;
  }

  @include media-breakpoint-down(md) {
    @include icon-size(52px);
  }

  @include media-breakpoint-only(xs) {
    @include icon-size(40px);
    margin-bottom: math.div($base-spacing, 2)
  }

  [class*='c-svg__icon'] {
    margin-bottom: math.div($base-spacing, 2);

    @include media-breakpoint-down(xs) {
      margin-bottom: math.div($base-spacing, 4);
    }
  }
}

.m-homepage__search-wrapper {
  @include media-breakpoint-up(md) {
    @include centered-10-col();
  }

  @include media-breakpoint-down(sm) {
    margin-top: $base-spacing * 2;
  }

  @include media-breakpoint-down(xs) {
    margin-top: 0;
  }

  .search {
    @include media-breakpoint-down(sm) {
      padding-bottom: $base-spacing;
      padding-top: $base-spacing;
    }
  }
}

.m-homepage__shortcut-text {
  font-family: $headings-font-family;
  font-size: $font-size-base-xxl;
  font-weight: $font-weight-medium;
  line-height: $space-16 * 1.7;

  @include media-breakpoint-down(md) {
    font-size: $font-size-base;
  }

  @include media-breakpoint-down(sm) {
    font-size: $font-size-base-sm;
  }
}

.m-homepage-search__go-btn {
  flex: 0 0 auto;
}

.pageview.index-template {
  // Override 2rem padding-bottom on .page-container class.
  // Putting this here until the template classes are refactored
  // to follow our new class naming style.
  padding-bottom: 0;
}

.m-homepage__important-links {
  align-items: stretch;
  display: flex;
  flex-wrap: wrap;
  margin-left: -$homepage-gutter;
  margin-right: -$homepage-gutter;
  padding-bottom: $base-spacing * 3;
}

.m-homepage__important-link {
  align-items: stretch;
  display: flex;
  flex: 0 0 25%;
  max-width: 25%;
  padding: $homepage-gutter;

  @include media-breakpoint-down(md) {
    flex-basis: 50%;
    max-width: 50%;
  }

  &:hover {
    color: $white;
    text-decoration: none;
  }
}

.m-homepage__important-link-content {
  background: $brand-primary;
  border-radius: $border-radius;
  color: $white;
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  justify-content: space-between;
  // fixes a spacing issue in IE where title causes element
  // to be wider than parent at small breakpoints
  max-width: 100%;
  padding: $base-spacing;

  &:hover {
    background: $brand-primary-darkest;
  }
}

.m-homepage__important-link-title {
  flex: 1 1 auto;
  font-weight: $font-weight-medium;
  margin-bottom: $base-spacing;

  @include media-breakpoint-up(sm) {
    font-size: $font-size-h3;
    line-height: $font-size-h3;
    margin-bottom: $base-spacing * 2;
  }
}

.m-homepage__important-link-icon {
  flex: 0 0 auto;
  font-weight: $font-weight-medium;

  .fa,
  svg {
    fill: $white;
    font-size: 1.5rem;
    height: $base-spacing * 1.5;
    width: $base-spacing * 1.5;
  }
}

.m-homepage__news-item {
  color: $black;
}

.m-homepage__fares {
  // Gaps should match Important Links on XXL
  @include media-breakpoint-only(xxl) {
    .c-multi-column__row {
      margin-left: -$homepage-gutter;
      margin-right: -$homepage-gutter;
    }

    .c-multi-column__column {
      padding: $homepage-gutter;
    }
  }

  // Override multi-column grid math (default is 1 ÷ #columns)
  @include media-breakpoint-between(sm, lg) {
    // Allow over-width wrapping of columns
    .c-multi-column__row {
      flex-wrap: wrap;
    }

    // Force two-columns per row
    .c-multi-column__column {
      @include make-col-span(6);
    }
  }
}

.m-homepage__fares-link {
  display: block;
  margin: auto;

  @include media-breakpoint-up(sm) {
    max-width: 18rem;
  }
}

.m-homepage__alerts {
  display: flex;
  flex-direction: column;
  gap: 1em;

  h2, h3, h4 {
    a {
      display: inline-flex;
      color: inherit;
      font-size: inherit;
      line-height: inherit;

      &:hover {
        text-decoration: inherit;
      }

      > .header-text {
        text-decoration: underline;
        margin-left: 0.5em;
      }
    }

    svg * {
      fill: currentColor;
    }
  }

  h2 {
    @include media-breakpoint-down(sm) {
      font-size: 18px;
      line-height: 24px;
    }

    @include media-breakpoint-only(md) {
      font-size: 21px;
      line-height: 27px;
    }

    @include media-breakpoint-up(lg) {
      font-size: 32px;
      line-height: 40px;
    }
  }

  h3 {
    @include media-breakpoint-down(sm) {
      font-size: 14px;
      line-height: 16px
    }

    @include media-breakpoint-only(md) {
      font-size: 16px;
      line-height: 24px;
    }

    @include media-breakpoint-up(lg) {
      font-size: 24px;
      line-height: 30px;
    }
  }

  p, a {
    @include media-breakpoint-down(sm) {
      font-size: 14px;
      line-height: 21px;
    }

    @include media-breakpoint-only(md) {
      font-size: 16px;
      line-height: 24px;
    }

    @include media-breakpoint-up(lg) {
      font-size: 18px;
      line-height: 27px;
    }
  }

  ul {
    list-style: none;
    padding-left: 0;
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 1rem;

    li {
      display: inline-block;
    }
  }

  ul.commuter_rail li {
    background-color: $brand-commuter-rail;
  }

  ul.ferry li {
    background-color: $brand-ferry;
  }

  ul.commuter_rail, ul.ferry {
    li {
      color: white;
      border-radius: 200px;
      text-transform: uppercase;

      a {
        padding: calc(1rem / 4) calc(1rem / 2);
        color: inherit;
      }
    }
  }

  ul.bus {
    li {
      a, .c-icon__bus-pill {
        display: inline-block;
        width: 100%;
        max-height: unset;
      }
    }
  }

  ul.bus, ul.commuter_rail, ul.ferry {
    li {
      a {
        font-family: $headings-font-family;
        font-size: $font-size-small-caps !important;
        text-transform: uppercase;
        font-weight: 700;
      }
    }
  }

  ul.subway svg {
    height: 24px;
  }

  .m-homepage__alerts-main {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 2rem;

    h2, h3, h4 {
      margin-top: 0px;
    }
  }

  .m-homepage__alerts-high-priority {
    flex: 1 1 590px;
  }

  .m-homepage__alerts-high-priority-by-mode {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 1rem;

    flex: 1 1 450px;

    .m-homepage__alerts-mode {
      position: relative;

      flex: 1 1 max(250px, calc(50% - 1em));

      h3 {
        margin-bottom: 0.75em;
      }

      &:last-child {
        p {
          margin-bottom: 0;
        }
      }
    }

    li {
      margin-right: 12px;
      margin-bottom: 12px;

      a {
        text-decoration: none;
      }
    }
  }

  .m-homepage__alerts-accessibility {
    position: relative;
    flex: 1 1 320px;

    display: flex;
    flex-direction: column;

    > h2 {
      margin-bottom: 0.75em;
    }
  }

  .m-homepage__alerts-stops li {
    &::after {
      content: ",\00a0";
      display: inline-block;
    }

    &:last-child::after {
      display: none;
    }
  }

  .m-homepage__alerts-footer {
    border-top: 2px solid $gray-lightest;
    padding-top: 2rem;

    display: flex;
    flex-direction: row;

    justify-content: flex-end;

    .buttons {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap-reverse;
      gap: 1rem;

      a {
        flex: 1 1 auto;
      }
    }
  }

  // Borders
  @include media-breakpoint-down(lg) {
    .m-homepage__alerts-accessibility::before {
      content: '';
      display: block;
      background: $gray-lightest;

      position: absolute;
      top: -1rem;
      left: 1rem;
      right: 1rem;
      height: 2px;
    }
  }

  @include media-breakpoint-only(xxl) {
    .m-homepage__alerts-accessibility::before {
      content: '';
      display: block;
      background: $gray-lightest;

      position: absolute;
      top: 1rem;
      left: -1rem;
      bottom: 1rem;
      width: 2px;
    }
  }

  @include media-breakpoint-down(xs) {
    .m-homepage__alerts-mode::after {
      content: '';
      display: block;
      background: $gray-lightest;

      position: absolute;
      bottom: 0.25rem;
      left: 0;
      right: 0;
      height: 2px;
    }

    .m-homepage__alerts-mode:last-child::after {
      display: none;
    }
  }
}

